// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card快照测试 海拔为0的Card 1`] = `
<div
  className="sc-AxjAm sc-AxirZ hJLjyX sinoui-paper sinoui-card"
  elevation={0}
  tabIndex="0"
>
  文本
</div>
`;

exports[`Card快照测试 边框模式Card 1`] = `
<div
  className="sc-AxjAm sc-AxirZ dCWOCB sinoui-paper sinoui-card sinoui-card--outlined"
  tabIndex="0"
>
  文本
</div>
`;

exports[`Card快照测试 默认(海拔为1的Card) 1`] = `
<div
  className="sc-AxjAm sc-AxirZ iGbXcV sinoui-paper sinoui-card"
  tabIndex="0"
>
  文本
</div>
`;
